# TTK4145-Project

./: A.c  B.c  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake-build.yml
boilerplate/: launch.json
include/: driver.h  driver2.h  elevator.h  log.h  network.h  process.h  queue.h
src/: A.c  B.c  CMakeLists.txt  driver.c  driver2.c  elevator.c  main.c  network.c  process.c  queue.c
src/master/: main.c
src/slave/: main.c
